clean code with sonar